Work on change property number + Showing logs

--- a/resources/lang/fa.json
+++ b/resources/lang/fa.json
@@ -2,5 +2,6 @@
     "Showing" : "نمایش",
     "to" : "تا",
     "of" : "از",
-    "results" : "نتیجه‌"
+    "results" : "نتیجه‌",
+    "changed_property_number": "تغییر شماره اموال از => :from به :to"
 }
